syntax = "proto3";

package ru.maxigram.backend.grpccommons;

import "google/protobuf/timestamp.proto";

message UserProfile {
  string user_id = 1;
  google.protobuf.Timestamp birthdate = 2;
  string first_name = 3;
  string last_name = 4;
}

message Interest {
  int64 id = 1;
  string name = 2;
}

message GetUserProfileRequest {
  string user_id = 1;
}

message GetUserInterestsRequest {
  string user_id = 1;
}

message GetUserInterestsResponse {
  repeated Interest interests = 1;
}

message GetAllUserProfilesRequest {}

message GetAllUserProfilesResponse {
  repeated UserProfile profiles = 1;
}

message AddInterestToUserProfileRequest {
  string user_id = 1;
  int64 interest_id = 2;
}

message AddInterestToUserProfileResponse {}

service UserService {
  rpc createUserProfile(UserProfile) returns (UserProfile);
  rpc getUserProfile(GetUserProfileRequest) returns (UserProfile);
  rpc getUserInterests(GetUserInterestsRequest) returns (GetUserInterestsResponse);
  rpc getAllUserProfiles(GetAllUserProfilesRequest) returns (GetAllUserProfilesResponse);
  rpc addInterestToUserProfile(AddInterestToUserProfileRequest) returns (AddInterestToUserProfileResponse);
}